# tracehunt

./: .gitignore  Dockerfile  LICENSE  NOTICE.md  README.md  pyproject.toml  requirements.txt  smithery.yaml  tracehunt.example.yaml
.github/workflows/: ci.yml
docs/: demo.tape
mcp/: README.md  tracehunt_mcp.py
skill/: SKILL.md
tests/: test_config.py  test_report.py
tracehunt/: __init__.py  __main__.py  api.py  config.py  core.py  notify.py  report.py  result.py  sites.py
